--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,20 @@ services:
     ports:
       - '5433:5432'
 
+  api: 
+    build: 
+      context: .
+      dockerfile: DockerFile.api
+    container_name: nest-api
+    env_file: .env
+    ports: 
+      - "${API_PORT}:${API_PORT}"
+    depends_on: 
+      - postgres
+    environment: 
+      DATABASE_URL: ${DATABASE_URL_CONTEINERS}
+      JWT_SECRET: ${JWT_SECRET}
+      CLOUDINARY_CLOUD_NAME: ${CLOUDINARY_CLOUD_NAME}
+      CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
+      CLOUDINARY_API_SECRET: ${CLOUDINARY_API_SECRET}
+    command: sh -c "npx prisma migrate deploy && npm run start:prod"
